--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>This is the alpha-blog</h1>
-<p>Hopefully this will become a dope project</p>
+
+<%= link_to 'Articles listing', articles_path %> |
+<%= link_to 'About', about_path %>
